* handle auth register login and logout * create custom hooks for auth validation * show posts on home page * handle post reaction, deletion and update

--- a/src/components/Navigation/styles/styles.module.css
+++ b/src/components/Navigation/styles/styles.module.css
@@ -9,6 +9,7 @@
 
 .user_profile {
   display: flex;
-  justify-content: center;
-  width: 400px;
+  justify-content: space-between;
+  gap: 20px;
+  width: max-content;
 }
