--- a/src/components/Home/Form/styles/styles.module.css
+++ b/src/components/Home/Form/styles/styles.module.css
@@ -5,6 +5,8 @@
   justify-content: center;
   align-items: start;
   gap: 16px;
+  padding: 15px;
+  position: relative;
 }
 
 .post-form__btn-box {
@@ -22,9 +24,10 @@
 .post-form__file-field label {
   width: 97%;
   text-align: center;
-  font-weight: bold;
+  font-weight: 300;
   color: #fff;
   background: var(--app-salad);
+  font-size: 14px;
   border-radius: 3px;
   padding: 5px;
   cursor: pointer;
@@ -42,4 +45,23 @@
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
+}
+
+.no-auth__msg {
+  max-width: 100%;
+  padding: 20px;
+  text-align: center;
+  text-wrap: balance;
+  font-size: 14px;
+  font-weight: 600;
+  color: #fff;
+  background: #000831;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.no-auth__msg a {
+  font-weight: 700;
+  color: inherit;
+  text-transform: capitalize;
 }
