* split up components * reafacture mobile styles * fix mui textarea windowResizeLoop error with replace mui textarea by react-textarea-autosize * create custom textarea component similar to mui textarea * handle styles and logic for post create/update from mobile

--- a/src/components/Auth/styles/styles.module.css
+++ b/src/components/Auth/styles/styles.module.css
@@ -5,11 +5,11 @@
 
 .auth-form__anotation-box {
   font-size: 12px;
-  color: "#3d3d3d";
+  color: var(--app-gray);
 }
 
 .auth-form__anotation-box a {
-  color: #0466c8;
+  color: var(--app-sky-blue);
   font-weight: 700;
 }
 
