--- a/src/components/Navigation/styles/styles.module.css
+++ b/src/components/Navigation/styles/styles.module.css
@@ -3,6 +3,12 @@
   align-items: center;
 }
 
+.brand_container:visited,
+.brand_container:active,
+.brand_container:focus {
+  color: var(--app-blue);
+}
+
 .logo {
   margin-left: 15px;
 }
@@ -12,4 +18,10 @@
   justify-content: space-between;
   gap: 20px;
   width: max-content;
+}
+
+@media (max-width: 500px) {
+  .logo {
+    margin: 0;
+  }
 }
