--- a/src/components/PostDetails/postDetails.module.css
+++ b/src/components/PostDetails/postDetails.module.css
@@ -1,10 +1,13 @@
+/*****************/
+/* POST CONTENT */
+/***************/
 .postDetailsSection {
   flex: 1;
   margin: 10px;
 }
 
 .postCreationDate {
-  color: rgba(0, 0, 0, 0.5);
+  color: var(--app-black-05);
   font-size: 14px;
 }
 
@@ -50,6 +53,10 @@
   justify-content: flex-end;
 }
 
+/******************/
+/* RELATED POSTS */
+/****************/
+
 .relatedPosts {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -81,21 +88,24 @@
   right: 0;
   bottom: 0;
   overflow: hidden;
-  background: rgba(0, 0, 0, 0.5);
-  color: #fff;
+  background: var(--app-black-05);
+  color: var(--app-white);
 }
 
 @media (max-width: 500px) {
-  .imageSection {
-    margin-left: 0;
+  .postDetailsSection {
     order: 1;
   }
 
-  .postDetailsSection {
-    order: 2;
+  .imageSection {
+    margin-left: 0;
   }
 
-  .recommendedPosts {
+  .relatedPostsContainer {
+    order: 3;
+  }
+
+  .relatedPosts {
     justify-items: center;
     grid-template-columns: repeat(auto-fit, 1fr);
   }
