--- a/src/components/layouts/PostCard/styles/postCard.module.css
+++ b/src/components/layouts/PostCard/styles/postCard.module.css
@@ -2,14 +2,14 @@
   position: absolute;
   top: 20px;
   left: 20px;
-  color: white;
+  color: var(--app-white);
 }
 
 .overlay_secondary {
   position: absolute;
   top: 20px;
   right: 20px;
-  color: white;
+  color: var(--app-white);
 }
 
 .overlay_secondary button {
