--- a/src/components/layouts/SearchByTagAndTitle/searchByTagAndTitle.css
+++ b/src/components/layouts/SearchByTagAndTitle/searchByTagAndTitle.css
@@ -7,19 +7,14 @@
 
 .react-tagsinput--focused {
   border-width: 2px;
-  border-color: #0466c8;
+  border-color: var(--app-sky-blue);
 }
 
 .react-tagsinput-tag {
-  background-color: #fff;
-  border: 1px solid #333;
-  background: #333;
-  color: #fff;
+  background-color: var(--app-white);
+  border: 1px solid var(--app-gray);
+  background: var(--app-gray);
+  color: var(--app-white);
   border-radius: 15px;
   padding: 5px 10px;
-}
-
-.sidebar {
-  position: sticky;
-  top: 20px;
 }
