--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -24,3 +24,12 @@ body {
   font-weight: 600;
   opacity: 0.6;
 }
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a.underline:hover {
+  text-decoration: underline;
+}
