handle user profile *wip:loading skeletons

--- a/src/components/PostDetails/components/comments/comments.module.css
+++ b/src/components/PostDetails/components/comments/comments.module.css
@@ -90,6 +90,10 @@
     flex-direction: column;
   }
 
+  .commentsListInnerContainer.empty {
+    height: 90px;
+  }
+
   .commentsListContainer {
     order: 1;
   }
