--- a/src/components/Profile/profile.module.css
+++ b/src/components/Profile/profile.module.css
@@ -12,7 +12,7 @@
 
 .profileHeaderFig {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   gap: 5px;
   margin: 0;
 }
@@ -27,6 +27,10 @@
 .profileHeaderFigCaption span,
 .profileHeaderFigCaption strong {
   line-height: 1;
+}
+
+.profileHeaderFigName {
+  text-transform: capitalize;
 }
 
 .profileHeaderFigEmail {
