--- a/src/components/PostDetails/postDetails.module.css
+++ b/src/components/PostDetails/postDetails.module.css
@@ -19,7 +19,7 @@
   text-align: justify;
   hyphens: auto;
   -webkit-hyphens: auto;
-  word-break: break-all;
+  /* word-break: break-all; */
 }
 
 .imageSection {
